--- a/ev3segurito1/appsettings.json
+++ b/ev3segurito1/appsettings.json
@@ -6,11 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data","Source=(localdb)\\MSSQLLocalDB;Initial" "Catalog=AppSegurity;Integrated",
-    "Security=True;Connect" "Timeout=30;Encrypt=False;Trust",
-    "Server" "Certificate=False;Application",
-    "Intent=ReadWrite;Multi" "Subnet",
-    "Failover=False"
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=AppSegurito;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "AllowedHosts": "*"
 }
